--- a/dashboard.html
+++ b/dashboard.html
@@ -255,6 +255,7 @@ iframe{flex:1;width:100%;border:0;background:#fff}
     <div class="icon" onclick="openPage('ingredientes.html',this)"><span class="glyph box"></span></div>
     <div class="icon" onclick="openPage('analiseficha.html',this)"><span class="glyph chart"></span></div>
    <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
+    <div class="icon" onclick="openPage('igredientesexcell.html',this)"><span class="glyph settings"></span></div>
 <div class="icon" onclick="openPage('midias.html',this)"><span class="glyph media"></span></div>
 
   </aside>
@@ -319,7 +320,16 @@ function openPage(page, el){
     "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
     "ingredientes.html": "CB SYSTEMS® - Ingredientes",
     "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
-    "config.html": "CB SYSTEMS® - Configurações",
+    "config.html": "CB SYSTEMS® - Análise financeira",
+    "igredientesexcell.html": "CB SYSTEMS® - Análise de Igredientes",
+
+
+
+    igredientesexcell.html
+
+
+
+  
     "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
   };
   document.getElementById("pageTitle").innerText = titles[page] || "CB SYSTEMS®";
