--- a/dashboard.html
+++ b/dashboard.html
@@ -315,15 +315,15 @@ function openPage(page, el){
   document.querySelectorAll(".icon").forEach(i=>i.classList.remove("active"));
   el.classList.add("active");
 
-  const titles = {
-    "home.html": "CB SYSTEMS® - Dashboard",
-    "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
-    "ingredientes.html": "CB SYSTEMS® - Ingredientes",
-    "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
-    "config.html": "CB SYSTEMS® - Análise financeira",
-    "igredientesexcell.html": "CB SYSTEMS® - Análise de Igredientes",
-
-
+const titles = {
+  "home.html": "CB SYSTEMS® - Dashboard",
+  "fichatecnica.html": "CB SYSTEMS® - Fichas Técnicas",
+  "ingredientes.html": "CB SYSTEMS® - Ingredientes",
+  "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
+  "config.html": "CB SYSTEMS® - Análise financeira",
+  "igredientesexcell.html": "CB SYSTEMS® - Análise de Ingredientes",
+  "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
+};
 
     igredientesexcell.html
 
