--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -325,6 +325,7 @@ button:disabled{opacity:.6;cursor:not-allowed}
       <option value="">SELECIONE</option>
       <option>PRATO PRINCIPAL</option>
       <option>ENTRADA</option>
+      <option>HAMBURGUER</option>
       <option>SOBREMESA</option>
       <option>SALADA</option>
       <option>DRINK</option>
